# libxplclient

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen-clean.sh  configure.ac  libxplclient.pc.in
src/: Makefile.am  global_init.c  json_object_get_by_key.c  new_free.c  search_by_serial.c  search_devices.c  socket_by_serial.c  stringify.h  url.c  xplclient-version.h.in  xplclient.h
tools/: Makefile.am  xpl-conf-get.c  xpl-conf-set.c  xpl-list.c
